--- a/xournalpp/toolbar.ini
+++ b/xournalpp/toolbar.ini
@@ -1,58 +1,9 @@
 ## Xournal++ Toolbar configuration
-## Here you can customize the Toolbars
-# Delete this file to generate a new config file with default values
-#
-# Available buttons:
-# File: NEW,OPEN,SAVE,SAVEPDF,PRINT
-#
-# Edit: UNDO,REDO,CUT,COPY,PASTE,SEARCH,DELETE,ROTATION_SNAPPING,GRID_SNAPPING
-#
-# View: PAIRED_PAGES,PRESENTATION_MODE,FULLSCREEN,MANAGE_TOOLBAR,CUSTOMIZE_TOOLBAR,ZOOM_OUT,ZOOM_IN,ZOOM_FIT,ZOOM_100
-#
-# Navigation: GOTO_FIRST,GOTO_BACK,GOTO_PAGE,GOTO_NEXT,GOTO_LAST,GOTO_PREVIOUS_LAYER,GOTO_NEXT_LAYER,GOTO_TOP_LAYER,
-#             GOTO_NEXT_ANNOTATED_PAGE
-#
-# Journal: INSERT_NEW_PAGE,DELETE_CURRENT_PAGE
-#
-# Tool: PEN,PLAIN,DASHED,DASH-/ DOTTED,DOTTED,ERASER,HIGHLIGHTER,TEXT,MATH_TEX,IMAGE,DEFAULT_TOOL,SHAPE_RECOGNIZER,SELECT_PDF_TEXT_LINEAR,
-#       SELECT_PDF_TEXT_RECT,DRAW_RECTANGLE,DRAW_ELLIPSE,DRAW_ARROW,DRAW_DOUBLE_ARROW,DRAW_COORDINATE_SYSTEM,RULER,DRAW_SPLINE,
-#       SELECT_REGION,SELECT_RECTANGLE,SELECT_MULTILAYER_REGION,SELECT_MULTILAYER_RECTANGLE,SELECT_OBJECT,VERTICAL_SPACE,PLAY_OBJECT,
-#       HAND,SETSQUARE,COMPASS,SELECT_FONT,AUDIO_RECORDING,AUDIO_PAUSE_PLAYBACK,AUDIO_STOP_PLAYBACK,AUDIO_SEEK_FORWARDS,AUDIO_SEEK_BACKWARDS
-#  Notice: ERASER and PEN also have drop down menus to select the type, SELECT are all selection tools, with drop down menu
-#
-# Footer tools: PAGE_SPIN,ZOOM_SLIDER,LAYER,TOOL_FILL,PEN_FILL_OPACITY
-#  PAGE_SPIN: The page spiner, incl. current page label
-#  ZOOM_SLIDER: The zoom slider
-#  LAYER: The layer dropdown menu
-#
-# Color: COLOR(0),COLOR(1),COLOR(2),COLOR(3),COLOR(4),COLOR(5),COLOR(6),COLOR(7),COLOR(8),COLOR(9),COLOR(10),COLOR_SELECT
-#  Notice: The colors reference the respective color in the palette.gpl file.
-#          For backwards compatibility the hex representation, e.g. COLOR(0xff8000), is still permitted. However, the hex value
-#          will be IGNORED in favour of the "next" palette color. They will be automatically migrated when the user customizes
-#          the respective toolbar configuration.
-#
-# Non-menu items: SELECT,DRAW,PDF_TOOL
-#
-# Tool configuration: VERY_FINE,FINE,MEDIUM,THICK,VERY_THICK
-#
-# Item separation: SEPARATOR,SPACER
-#
-#
-[Portrait Copy]
-toolbarTop1=SAVE,NEW,OPEN,SEPARATOR,SAVEPDF,PRINT,SEPARATOR,IMAGE,CUT,COPY,PASTE,SEPARATOR,UNDO,REDO,SEPARATOR,DELETE_CURRENT_PAGE,INSERT_NEW_PAGE,SPACER,SELECT_FONT
-toolbarTop2=PLAIN,DASHED,DASH-/ DOTTED,DOTTED,SPACER,DRAW_RECTANGLE,DRAW_COORDINATE_SYSTEM,DRAW_ELLIPSE,RULER,DRAW_ARROW,DRAW_DOUBLE_ARROW,DRAW_SPLINE,SHAPE_RECOGNIZER,SPACER,ROTATION_SNAPPING,GRID_SNAPPING,SEPARATOR,VERTICAL_SPACE,HAND,SETSQUARE,COMPASS,SPACER,VERY_FINE,FINE,MEDIUM,THICK,VERY_THICK,SPACER,FILL_OPACITY,TOOL_FILL,COLOR_SELECT
-toolbarBottom1=PAGE_SPIN,SEPARATOR,LAYER,SPACER,GOTO_BACK,GOTO_NEXT_ANNOTATED_PAGE,GOTO_NEXT,SPACER,FULLSCREEN,PAIRED_PAGES,PRESENTATION_MODE,ZOOM_100,ZOOM_FIT,ZOOM_OUT,ZOOM_SLIDER,ZOOM_IN
-toolbarLeft1=SPACER,PEN,HIGHLIGHTER,ERASER,SEPARATOR,SELECT_REGION,SELECT_RECTANGLE,SEPARATOR,SELECT_PDF_TEXT_LINEAR,SELECT_PDF_TEXT_RECT,SEPARATOR,TEXT,MATH_TEX,SPACER,SPACER,SPACER,SHOW_SIDEBAR
-toolbarRight1=SPACER,COLOR(0),COLOR(1),COLOR(2),COLOR(3),COLOR(4),COLOR(5),COLOR(6),COLOR(7),COLOR(8),COLOR(9),COLOR(10),COLOR(11),COLOR(12),COLOR(13),COLOR(14),COLOR(15),SPACER
-name=Adly
 
-[Floating Toolbox (experimental) Copy]
-toolbarTop1=SAVE,NEW,OPEN,SEPARATOR,SAVEPDF,PRINT,SEPARATOR,IMAGE,CUT,COPY,PASTE,SEPARATOR,UNDO,REDO,SEPARATOR,DELETE_CURRENT_PAGE,INSERT_NEW_PAGE,SPACER,SELECT_FONT
-toolbarTop2=DRAW_COORDINATE_SYSTEM,RULER,DRAW_DOUBLE_ARROW,DRAW_SPLINE,SHAPE_RECOGNIZER,SPACER,ROTATION_SNAPPING,GRID_SNAPPING,SEPARATOR,VERTICAL_SPACE,HAND,SETSQUARE,COMPASS,DEFAULT_TOOL,SPACER,VERY_FINE,FINE,MEDIUM,THICK,VERY_THICK,SPACER,TOOL_FILL,FILL_OPACITY,SEPARATOR,COLOR(0),COLOR(1),COLOR(2),COLOR(3),COLOR(4),COLOR(5),COLOR(6),COLOR(7),COLOR(8),COLOR(9),COLOR(10),COLOR_SELECT
+[Portrait Copy]
+toolbarTop1=SAVE,NEW,OPEN,SEPARATOR,SAVEPDF,PRINT,SEPARATOR,IMAGE,CUT,COPY,PASTE,SEPARATOR,UNDO,REDO,SEPARATOR,DELETE_CURRENT_PAGE,INSERT_NEW_PAGE,SPACER,Plugin::vi-mode,SELECT_FONT
+toolbarTop2=PLAIN,DASHED,DASH-/ DOTTED,DOTTED,SPACER,RULER,DRAW_COORDINATE_SYSTEM,DRAW_ELLIPSE,DRAW_RECTANGLE,DRAW_ARROW,DRAW_DOUBLE_ARROW,DRAW_SPLINE,SHAPE_RECOGNIZER,SPACER,ROTATION_SNAPPING,GRID_SNAPPING,SEPARATOR,VERTICAL_SPACE,HAND,SETSQUARE,COMPASS,SPACER,VERY_FINE,FINE,MEDIUM,THICK,VERY_THICK,SPACER,FILL_OPACITY,TOOL_FILL,COLOR_SELECT
 toolbarBottom1=PAGE_SPIN,SEPARATOR,LAYER,SPACER,GOTO_BACK,GOTO_NEXT_ANNOTATED_PAGE,GOTO_NEXT,SPACER,FULLSCREEN,PAIRED_PAGES,PRESENTATION_MODE,ZOOM_100,ZOOM_FIT,ZOOM_OUT,ZOOM_SLIDER,ZOOM_IN
-toolbarLeft1=PEN,ERASER,SEPARATOR,TEXT,MATH_TEX
-toolbarFloat1=HIGHLIGHTER,SEPARATOR,SELECT_PDF_TEXT_LINEAR,SELECT_PDF_TEXT_RECT
-toolbarFloat2=SELECT_RECTANGLE,SELECT_REGION
-toolbarFloat4=COLOR(1),COLOR(4),COLOR(6),COLOR(8),COLOR(5),COLOR(0)
-toolbarFloat3=PLAIN,DASHED,DASH-/ DOTTED,DOTTED,SEPARATOR,DRAW_RECTANGLE,DRAW_ELLIPSE,DRAW_ARROW
-name=Floating Adly
+toolbarLeft1=SPACER,PEN,HIGHLIGHTER,ERASER,LASER_POINTER,SEPARATOR,SELECT_RECTANGLE,SELECT_REGION,SEPARATOR,SELECT_PDF_TEXT_LINEAR,SELECT_PDF_TEXT_RECT,SEPARATOR,TEXT,MATH_TEX,SPACER,SPACER,SPACER,SHOW_SIDEBAR
+toolbarRight1=SPACER,COLOR(0),COLOR(1),COLOR(2),COLOR(3),SEPARATOR,COLOR(4),COLOR(5),COLOR(6),COLOR(7),SEPARATOR,COLOR(8),COLOR(9),COLOR(10),COLOR(11),SEPARATOR,COLOR(12),COLOR(13),COLOR(14),COLOR(15),SPACER
+name=Adly
